# agy-cli-manager

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: index.html  robots.txt  sitemap.xml
src/agy_cli_manager/: __init__.py  cli.py  manager.py
