[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agy-cli-manager"
version = "0.2.0"
description = "Active-standby account manager for Antigravity CLI"
requires-python = ">=3.10"
readme = "README.md"
authors = [
  { name = "zcop" }
]
dependencies = []

[project.scripts]
agy-cli-manager = "agy_cli_manager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
